tests/errors/popframe-err.src
.IPPcode18
createframe
defvar TF@err
popframe